[package]
name = "bigquery-storage"
version = "0.1.2"
authors = ["damien <damien@openquery.io>"]
description = "A small wrapper around the Google BigQuery Storage API"
keywords = [ "google", "bigquery", "storage" ]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/openquery-io/bigquery-storage"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "arrow" ]

[build-dependencies]
tonic-build = "0.6.0"

[dev-dependencies]
tokio = { version = "1.0", features = [ "rt", "macros" ] }

[dependencies]
futures = "0.3"
tonic = { version = "0.6", features = ["transport", "tls", "tls-roots"] }
prost = "0.9"
prost-types = "0.9"

hyper = "^0.14"
hyper-rustls = "^0.22"
yup-oauth2 = "^5.0"

arrow = { version = "6.0", optional = true }
